WIP for pending-deletions